--- a/HW 1/HW 1.2.html
+++ b/HW 1/HW 1.2.html
@@ -13,7 +13,7 @@
 <body>
 <p><b>Квадрат числа: a <sup>2</sup></b></p>
 <p><b>Радиус сферы : r = &#8730(V / (4/3&#960))</b></p>
-<P><B>Формула кводратного корня: = &#8730 <sup>n</sup> </B></P>
+<P><B>Формулa кводратного корня: = &#8730 <sup>n</sup> </B></P>
 <p><b>Формула квадратного уровня: x = (-b &#177 &#8730(b&#178 - 4ac)) / 2a </b></p>
 <p><b>Площадь круга: S = &#960r&#178</b></p>
 <p><b>Теорема Пифагора: с = &#8730(a&#178 + b&#178)</b></p>
