--- a/HW 3/HW 3.1.html
+++ b/HW 3/HW 3.1.html
@@ -40,7 +40,7 @@
     <div class="text">
         <a href="#block1" class="arrow">&#8593;</a>
         <h1>Section Title 2</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus at atque aut dolor dolore in possimus reiciendis saepe sit, tempora! Hic necessitatibus officia qui totam! Dolorem fugiat maiores officiis rem!</p>
+        <p>Lorem ipsum dolor sit amet, consectetuur adipisicing elit. Accusamus at atque aut dolor dolore in possimus reiciendis saepe sit, tempora! Hic necessitatibus officia qui totam! Dolorem fugiat maiores officiis rem!</p>
         <a href="#block3" class="arrow">&#8595;</a>
     </div>
 </div>
