--- a/HW 1/HW 1.3.html
+++ b/HW 1/HW 1.3.html
@@ -30,7 +30,7 @@
 
 </head>
 
-<H1>Сприйняття кольорів у психології: вплив кольорів на емоції та поведінку людини</H1>
+<H1>Сприйняття кольoрів у психології: вплив кольорів на емоції та поведінку людини</H1>
 
 <P style="margin-bottom: 0" >У психології сприйняття кольорів є важливою темою, оскільки кольори можуть впливати на наше настрій, поведінку та емоції. Людський мозок сприймає кольори за допомогою спеціальних клітин в очах, які називаються конусами.За допомогою конусів ми сприймаємо три основні кольори - червоний, зелений і синій. Комбінування цих трьох кольорів у різних співвідношеннях дає нам можливість сприймати всі інші кольори.
 
