--- a/HW 3/HW 3 M1.html
+++ b/HW 3/HW 3 M1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Titlе</title>
   <link rel="stylesheet" href="style3.m1.css">
 </head>
 <body>
